@@ -1,3 +1,3 @@
-FROM clojure:openjdk-11-tools-deps-buster
+FROM clojure:openjdk-8-tools-deps-1.10.1.739-buster
 COPY app/target/aidbox-ts-1.0.0-SNAPSHOT-standalone.jar /app.jar
-CMD  java --add-modules java.xml.bind -jar /app.jar
+CMD  java -jar /app.jar
